In bettermap, when popup is displayed large text is not visible (dark gray text on top of black background). Also, text is trimmed. As a result, large text fields' pop up does not provide valuable information. Both issues have been addressed.

--- a/src/app/panels/bettermap/module.css
+++ b/src/app/panels/bettermap/module.css
@@ -2,3 +2,8 @@
 .leaflet-marker-icon {
   color: #333;
 }
+.leaflet-label {
+    color: white;
+    width: 200px;
+    white-space: normal !important;
+}
